# mcp-workshop

./: .gitignore  Guide Formateur.md  README.md  US 1 - Initialiser un serveur MCP.md  US 2 - Exposer la recherche DataHub comme tool MCP.md  US 2 — Exposer la recherche DataHub comme tool MCP.md  US 3 - Exposer un document comme resource MCP.md  US 3 — Exposer un document comme resource MCP.md  US 4 - Explorer DataHub via MCP.md  US 4 — Explorer DataHub via MCP.md  US 5 - Améliorer l'utilisabilité du MCP.md.md  US 5 — Améliorer l’utilisabilité MCP.md  US 6 - Sécurité et limites du MCP.md
datahub_api/: README.md  main.py  pyproject.toml
datahub_api/data/: documents.json  snippets.json  tags.json
java/: .gitignore  README.md  pom.xml
java/src/main/java/com/datahub/: DataHubCapabilities.java  DataHubLogTool.java  HelloTool.java  HelloWorldTools.java  McpServerApplication.java  Sanitizer.java
java/src/main/java/com/datahub/client/: DataHubClient.java  DataHubDocument.java  DataHubSnippet.java  DataHubTag.java  DocSearchResponse.java  (+2 more)
java/src/main/resources/: application.yml
python/: README.md  datahub_client.py  datahub_log_mcp_server.py  datahub_mcp_server.py  hello_tool.py  pyproject.toml  sanitizer.py  server.py
python/datahub_api/: README.md  __init__.py  main.py  models.py
python/datahub_mcp/: README.md  hello_tool.py  server.py
python/datahub_mcp/reference_server/: README.md  server.py
python/mcp/: README.md  __init__.py  server.py
python/mcp/reference_server/: README.md  __init__.py  server.py
python/reference_server/: README.md  server.py
(+1 files in other folders)
