[project]
name = "datahub_api"
version = "0.1.0"
description = "DataHub API"
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "fastapi[standard]>=0.128.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]