[project]
name = "td-mcp"
version = "0.1.0"
description = "Workshop MCP - DataHub API et serveurs MCP"
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard]>=0.32.0",
    "fastmcp>=0.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "fastapi[standard]>=0.128.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datahub_mcp"]

[tool.uv]
dev-dependencies = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]
